--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -1,55 +1,76 @@
 .app {
+    display: flex;
+    justify-content: center;
 
     .container{
+        width: 1024px;
 
-      //LOGIN & REGISTER
-      .auth{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-
-        h1{
-            font-size: 20px;
-            color: teal;
-            margin-bottom: 20px;
+        .link{
+            text-decoration: none;
+            color: inherit;
         }
 
-        form{
+        //LOGIN AND REGISTER
+        .auth{
             display: flex;
             flex-direction: column;
-            padding: 50px;
-            background-color: white;
-            width: 200px;
-            gap: 20px;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-image: url(../src/asserts/background3.jpeg);
+
+            h1{
+                font-size: 20px;
+                color: teal;
+                margin-bottom: 20px;
+            }
+
+            form{
+                display: flex;
+                flex-direction: column;
+                padding: 50px;
+                background-color: white;
+                width: 200px;
+                gap: 20px;
+
+                input{
+                    padding: 10px;
+                    border: none;
+                    border-bottom: 1px solid gray;
+                }
+
+                button{
+                    padding: 10px;
+                    border: none;
+                    background-color: teal;
+                    cursor: pointer;
+                    color: white;
+                }
+
+                p{
+                    font-size: 12px;
+                    color: red;
+                    text-align: center;
+                }
+
+                span{
+                   font-size: 12px;
+                   text-align: center;
+                }
+            }
         }
 
-        input{
-            padding: 10;
-            border: none;
-            border-bottom: 1px solid  gray;
-        }
-
-        button{
-            padding: 10px;
-            border: none;
-            background-color: teal;
-            cursor: pointer;
-            color: white;
-        }
-
-        p {
-            font-size: 12px;
-            color: red;
-        }
-
-        span {
-            font-size: 12px;
-            text-align: center;
-        }
-       background-image: url(./asserts/background3.jpeg);
+        // NAVBAR
+         .navbar{
+            .container{
+                padding: 10px 0px;
+                display: flex;
+                justify-content: space-between;
+            }
+         }
     }
+}
 
-    };
-};
+
+
+
