--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-image: url(../src/asserts/background3.jpeg);
+            background-image: url(./asserts/background3.jpeg);
 
             h1{
                 font-size: 20px;
@@ -65,7 +65,48 @@
             .container{
                 padding: 10px 0px;
                 display: flex;
+                align-items: center;
                 justify-content: space-between;
+
+                .logo{
+                    img{
+                        width: 20px;
+                    }
+                }
+
+                .links{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    h6{
+                        font-size: 16px;
+                        font-weight: 300;
+                    }
+
+                    span{
+                        cursor: pointer;
+                    }
+
+                    .write{
+                        background-color: lightgreen;
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-weight: 300;
+                        border: 1px solid white;
+
+
+                        &:hover{
+                            color: teal;
+                            background-color: white;
+                            border: 1px solid teal;
+                        }
+                    }
+                }
             }
          }
     }
