Successfully design the Footer and Navbar page, I want to start working on the Home page now

--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -70,7 +70,7 @@
 
                 .logo{
                     img{
-                        width: 20px;
+                        width: 100px;
                     }
                 }
 
@@ -109,6 +109,21 @@
                 }
             }
          }
+
+         //Footer
+          footer{
+           margin-top: 100px;
+           padding: 20px;
+           background-color: lightgreen;
+           display: flex;
+           align-items: center;
+           justify-content: space-between;
+           font-size: 12px;
+
+           img{
+             height: 50px;
+           }
+         } 
     }
 }
 
