--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -151,8 +151,8 @@
                             &::after{
                                 content: "";
                                 width: 100%;
-                                height: 100%;
-                                background-color: lawngreen;
+                                height: 95%;
+                                background-color: lightgreen;
                                 position: absolute;
                                 top: 20px;
                                 left: -20px;
@@ -162,7 +162,7 @@
 
                             img{
                                 width: 100%;
-                                max-height: 400px;
+                                height: 350px;
                                 object-fit: cover;
                             }
                         }
