--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -201,7 +201,47 @@
                     }
                 }
              }
+        
+             //SINGLE
 
+             .single{
+                display: flex;
+                gap: 50px;
+
+
+                .content{
+                    flex: 5;
+
+
+                    img{
+                        width: 100px;
+                        height: 300px;
+                        object-fit: cover;
+                    }
+
+                    .user{
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        font-size: 14px;
+                        img{
+                            width: 50px;
+                            height: 50px;
+                            border-radius: 50px;
+                            object-fit: cover;
+                        }
+
+                        span{
+                            font-weight: bold;
+                        }
+                    }
+                }
+
+
+                .menu{
+                    flex: 2;
+                }
+             }
     }
 }
 
