--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -211,10 +211,13 @@
 
                 .content{
                     flex: 5;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 30px;
 
 
-                    img{
-                        width: 100px;
+                    img {
+                        width: 100%;
                         height: 300px;
                         object-fit: cover;
                     }
@@ -223,17 +226,38 @@
                         display: flex;
                         align-items: center;
                         gap: 10px;
-                        font-size: 14px;
+                        font-size: 12px;
                         img{
                             width: 50px;
                             height: 50px;
-                            border-radius: 50px;
+                            border-radius: 50%;
                             object-fit: cover;
                         }
 
                         span{
                             font-weight: bold;
                         }
+                    }
+
+                    .edit{
+                        display: flex;
+                        gap: 5px;
+
+                        img{
+                            width: 28px;
+                            height: 28px;
+                            cursor: pointer;
+                        }
+                    }
+
+                    h1{
+                        font-size: 42px;
+                        color: #333;
+                    }
+
+                    p{
+                        text-align: justify;
+                        line-height: 30px;
                     }
                 }
 
