Successfully design the Home page and the styles, I want to start working on the writ.jsx and other page now

--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -380,8 +380,8 @@
 
                         :last-child{
                             cursor: pointer;
-                            color: teal;
-                            background-color: white;
+                            color: white;
+                            background-color: teal;
                             border: 1px solid teal;
                             padding: 3px 5px;
                         }    
