--- a/client-side/my-app/src/Style.scss
+++ b/client-side/my-app/src/Style.scss
@@ -386,6 +386,13 @@
                             padding: 3px 5px;
                         }    
                     }
+
+                    .cat{
+                        display: flex;
+                        text-align: center;
+                        gap: 2px;
+                        color: teal ;
+                    }
                 }
              }
 
